Dashboard: Enhanced UI with Loaders tab, improved Devices/Themes tabs, and persist state on refresh